SERVER-20625 Need to refresh ShardRegistry in mapreduce.shardedfinish command if the mongod isn't aware of any of the shards it needs to talk to